--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,64 @@
-# npm
-node_modules
-package-lock.json
-npm-shrinkwrap.json
+# Environment Variables / Sensitive Config
+# MUST ignore .env files containing secrets!
+.env
+.env.*
+!.env.example
+# Ignore Sequelize CLI config file if present (might contain credentials)
+config/config.json
+
+# Logs
+logs
 *.log
-*.gz
-*.env
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Coveralls
-.nyc_output
-coverage
+# Dependency directories
+node_modules/
 
-# Benchmarking
-benchmarks/graphs
+# Build output
+dist
+dist-ssr
+build/
+out/
 
-# ignore additional files using core.excludesFile
-# https://git-scm.com/docs/gitignore
+# Test coverage
+coverage/
+
+# Optional local development files
+*.local
+nodemon.json
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json # Often useful to share basic settings
+.idea
+*~
+*.swp
+*.bak
+*.tmp
+.DS_Store
+Thumbs.db
+
+# Optional: Operating System specific files (add as needed)
+# ehthumbs.db
+
+# Deprecated JetBrains files (optional)
+# *.iml
+# modules.xml
+# .idea/misc.xml
+# .idea/modules.xml
+# .idea/workspace.xml
+
+# VS Code cache/user settings (less common to commit)
+.vscode/.ropeproject
+.vscode/ipch/
+
+# Old Visual Studio files (from original list)
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
